# Metacanon_AI_Full_Stack

./: .gitignore  AGENT_COORDINATION_APPEND_ONLY.md  BUILD_PLAN_NORTH_STAR_MVP.md  CODEX_FULL_REPO_SOURCE_EXPORT.md  CODEX_SPHERE_THREAD_CODE_EXPORT.md  CODEX_TEAM_BRIEF_2026-03-05.md  Cargo.toml  DEVELOPER_REPORT_CODE_MANIFEST_2026-03-10.txt  DEVELOPER_REPORT_FILE_MANIFEST_2026-03-10.txt  DEVELOPER_REPORT_FULLSTACK_2026-03-10.md  DEVELOPER_REPORT_MASTER_FULLSTACK_PLUS_RUST_2026-03-10.md  DEVELOPER_REPORT_RUST_CORE_2026-03-10.md  Dockerfile  FACILITATOR_RUNBOOK.md  FULL_SUMMARY_DOCUMENT.md  FullStack-Max-Review.md  INSTALL_AGENT_HANDOFF_README.md  LEADERSHIP_BRIEF_NORTH_STAR_ANNOUNCEMENT.md  LEADERSHIP_BRIEF_NORTH_STAR_MVP.md  README.md  REPORT.md  RUST_CODE_MANIFEST_2026-03-10.txt  RUST_FILE_MANIFEST_2026-03-10.txt  SPHERE_THREAD_CAPABILITIES.md  SPHERE_THREAD_HANDOFF.md  SPHERE_WEBAPP_CONTRACT_TEST_MATRIX.md  SUBSPHERE_SPAWN_AND_TOOL_CALL_INFRA.md  TEAM_ALIGNMENT_CONSOLIDATED_SUMMARY.md  TESTING.md  docker-compose.fullstack.yml  package-lock.json  package.json  playwright.config.ts
metacanon-core/: Cargo.toml  README.md
metacanon-core/scripts/: build_installer_desktop.sh  build_installer_dmg.sh  install_metacanon.sh  install_obsidian.sh  run_installer_desktop.sh
metacanon-core/src/: action_validator.rs  communications.rs  compute.rs  ffi_bridge.rs  lib.rs  local_store.rs  main.rs  observability.rs  prism.rs  skill_client.rs  specialist_lens.rs  sphere_client.rs  storage.rs  sub_sphere_manager.rs  sub_sphere_torus.rs  task_sub_sphere.rs  torus.rs  torus_runtime.rs  ui.rs
src/: compute.rs  (+14 more)
(+583 files in other folders)
