[package]
name = "metacanon_ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "metacanon_ai"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "metacanon"
path = "src/main.rs"

[features]
default = []
tauri = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
napi = { version = "2", optional = true, default-features = false, features = ["napi8"] }
napi-derive = { version = "2", optional = true }
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
